--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-tensorflow==2.12.0
-pandas 
-dvc
-mlflow==2.2.2
+tensorflow>=2.12.0
+pandas
+# dvc  # omit: pulls databricks-cli which fails on Python 3.12+ (imp removed). Use conda install dvc if needed.
+mlflow>=2.2.2
 notebook
 numpy
 matplotlib
@@ -9,7 +9,6 @@ seaborn
 python-box==6.0.2
 pyYAML
 tqdm
-ensure==1.0.2
 joblib
 types-PyYAML
 scipy
